--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -38,7 +38,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Delegates\DrawDelegate.cs" />
-    <Compile Include="GlyphObjectInjector.cs" />
+    <Compile Include="GlyphCompositeInjector.cs" />
+    <Compile Include="GlyphSchedulableBase.cs" />
     <Compile Include="Scheduler\Base\CyclicDependencyException.cs" />
     <Compile Include="Exceptions\SingleComponentException.cs" />
     <Compile Include="GlyphComponent.cs" />
@@ -63,11 +64,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler\Base\SchedulerProfile.cs" />
     <Compile Include="Scheduler\Base\TopologicalOrderVisitor.cs" />
-    <Compile Include="Scheduler\GlyphObjectScheduler.cs" />
     <Compile Include="Scheduler\GlyphScheduler.cs" />
     <Compile Include="Scheduler\Base\IScheduler.cs" />
     <Compile Include="Scheduler\Base\ISchedulerController.cs" />
+    <Compile Include="Scheduler\GlyphSchedulerHandler.cs" />
     <Compile Include="Scheduler\IGlyphScheduler.cs" />
+    <Compile Include="Scheduler\IGlyphSchedulerAssigner.cs" />
     <Compile Include="Scheduler\IGlyphSchedulerController.cs" />
     <Compile Include="SinglePerParentAttribute.cs" />
     <Compile Include="Delegates\UpdateDelegate.cs" />
