--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Checkpoint.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
+    <Compile Include="IBatchable.cs" />
     <Compile Include="ITimeUnscalable.cs" />
     <Compile Include="Point.Extension.cs" />
     <Compile Include="Rectangle.Extension.cs" />
