--- a/Glyph.Game/Glyph.Game.csproj
+++ b/Glyph.Game/Glyph.Game.csproj
@@ -41,13 +41,12 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlyphRegistry.cs" />
     <Compile Include="IScene.cs" />
     <Compile Include="NewGlyphGame.cs" />
-    <Compile Include="GlyphGame.cs" />
-    <Compile Include="IGameMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ModeManager.cs" />
     <Compile Include="SceneBase.cs" />
+    <Compile Include="SceneSchedulerHandlerBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Diese\Diese.Composition\Diese.Composition.csproj">
@@ -61,6 +60,10 @@
     <ProjectReference Include="..\Glyph.Animation\Glyph.Animation.csproj">
       <Project>{2384DA3A-F989-4B1B-9044-A005CE8F4AB6}</Project>
       <Name>Glyph.Animation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Application\Glyph.Application.csproj">
+      <Project>{5D6CC7F3-0720-4242-A0FB-678E7D76F147}</Project>
+      <Name>Glyph.Application</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Audio\Glyph.Audio.csproj">
       <Project>{46aa8a4b-5a43-45f3-99e4-b7bad0d47fea}</Project>
@@ -82,9 +85,21 @@
       <Project>{C0D6FD93-B1EB-4877-8125-A69BC3C2795A}</Project>
       <Name>Glyph.Input</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Glyph.Localization\Glyph.Localization.csproj">
+      <Project>{1F7A7855-3E63-45CD-907A-D23AA61A02D2}</Project>
+      <Name>Glyph.Localization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Scripting\Glyph.Scripting.csproj">
+      <Project>{71BD4FA9-4CA8-426B-92D0-D32CF9D40794}</Project>
+      <Name>Glyph.Scripting</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Tools\Glyph.Tools.csproj">
       <Project>{6692F3F4-E1EA-4D53-B0A1-2DBA67414FC2}</Project>
       <Name>Glyph.Tools</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.UI\Glyph.UI.csproj">
+      <Project>{47E66422-AEFC-4B28-92C3-356FFD2E783C}</Project>
+      <Name>Glyph.UI</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
