--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -39,8 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ISceneRenderer.cs" />
+    <Compile Include="ISpriteSource.cs" />
     <Compile Include="TextureFactory.cs" />
-    <Compile Include="SpriteDescriptor.cs" />
+    <Compile Include="SpriteTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpriteRenderer.cs" />
   </ItemGroup>
