--- a/Glyph.Math/Glyph.Math.csproj
+++ b/Glyph.Math/Glyph.Math.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IntegerSequenceBuilder.cs" />
+    <Compile Include="IntegerSequencer.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\IntersectionUtils.cs" />
     <Compile Include="Shapes\ICircle.cs" />
