Add conversion from MonoGame Rectangle to CenteredRectangle

--- a/Glyph.Math/Glyph.Math.csproj
+++ b/Glyph.Math/Glyph.Math.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IntegerSequencer.cs" />
+    <Compile Include="Rectangle.Extension.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\IntersectionUtils.cs" />
     <Compile Include="Shapes\ICircle.cs" />
