--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBounded.cs" />
     <Compile Include="ISceneRenderer.cs" />
     <Compile Include="ISpriteSheet.cs" />
     <Compile Include="ISpriteSheetCarver.cs" />
@@ -46,6 +47,7 @@
     <Compile Include="Particles\ParticleBuilder.cs" />
     <Compile Include="Particles\ParticleEmitter.cs" />
     <Compile Include="Particles\StandardParticle.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="SpriteAnimation.cs" />
     <Compile Include="SpriteAnimatorTransition.cs" />
     <Compile Include="Shapes\CircleSprite.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="SpriteTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpriteRenderer.cs" />
+    <Compile Include="FillingRenderer.cs" />
     <Compile Include="UniformCarver.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +80,10 @@
     <ProjectReference Include="..\Glyph.Composition\Glyph.Composition.csproj">
       <Project>{8D4F4138-EB36-4427-9A2B-10A50723268C}</Project>
       <Name>Glyph.Composition</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Math\Glyph.Math.csproj">
+      <Project>{43692EE3-467A-41C9-8C18-9E7FCF7CC9DC}</Project>
+      <Name>Glyph.Math</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
