--- a/Glyph.Math/Glyph.Math.csproj
+++ b/Glyph.Math/Glyph.Math.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Shapes\IShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\CenteredRectangle.cs" />
+    <Compile Include="Shapes\OriginRectangle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
