Implements IMenu & LinearMenu

--- a/Glyph.UI/Glyph.UI.csproj
+++ b/Glyph.UI/Glyph.UI.csproj
@@ -40,12 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\ButtonBase.cs" />
+    <Compile Include="Controls\IButton.cs" />
     <Compile Include="IBorder.cs" />
     <Compile Include="IControl.cs" />
     <Compile Include="IFrame.cs" />
+    <Compile Include="IMenu.cs" />
     <Compile Include="ISizableBorder.cs" />
+    <Compile Include="Menus\LinearMenu.cs" />
+    <Compile Include="Menus\SelectionEventArgs.cs" />
     <Compile Include="Misc\Button.cs" />
-    <Compile Include="Menus\ButtonsMenu.cs" />
+    <Compile Include="Misc\ButtonsMenu.cs" />
     <Compile Include="HUD\GuideButton.cs" />
     <Compile Include="Padding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
