--- a/Glyph.Graphics/Glyph.Graphics.csproj
+++ b/Glyph.Graphics/Glyph.Graphics.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Shapes\FilledRectangleSprite.cs" />
     <Compile Include="Shapes\RectangleSprite.cs" />
     <Compile Include="Shapes\ShapedSpriteBase.cs" />
+    <Compile Include="SpriteArea.cs" />
     <Compile Include="SpriteLoader.cs" />
     <Compile Include="SpriteAnimator.cs" />
     <Compile Include="SpriteSheet.cs" />
