--- a/Glyph.Scripting/Glyph.Scripting.csproj
+++ b/Glyph.Scripting/Glyph.Scripting.csproj
@@ -43,9 +43,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actors\DelegateActor.cs" />
     <Compile Include="Actors\DynamicActor.cs" />
     <Compile Include="Actors\StaticActor.cs" />
     <Compile Include="IActor.cs" />
@@ -67,10 +67,6 @@
       <Project>{e2707575-12c2-4ce6-b8e4-e7efd8d4e301}</Project>
       <Name>Diese.Lua</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Diese\Diese.Serialization\Diese.Serialization.csproj">
-      <Project>{4AE2D764-4161-453D-8B2D-BD66607EC27A}</Project>
-      <Name>Diese.Serialization</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Glyph.Animation\Glyph.Animation.csproj">
       <Project>{2384DA3A-F989-4B1B-9044-A005CE8F4AB6}</Project>
       <Name>Glyph.Animation</Name>
@@ -79,21 +75,9 @@
       <Project>{8D4F4138-EB36-4427-9A2B-10A50723268C}</Project>
       <Name>Glyph.Composition</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Glyph.Effects\Glyph.Effects.csproj">
-      <Project>{C1E7FE9C-0D98-4F1C-A6B2-11DFDB431F8A}</Project>
-      <Name>Glyph.Effects</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Entities\Glyph.Entities.csproj">
-      <Project>{729CF52C-D06C-42FD-A2EE-6C19E07D185F}</Project>
-      <Name>Glyph.Entities</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Glyph.Graphics\Glyph.Graphics.csproj">
       <Project>{CC4D895F-646F-43C8-B25E-81CF5803ED7A}</Project>
       <Name>Glyph.Graphics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Localization\Glyph.Localization.csproj">
-      <Project>{1F7A7855-3E63-45CD-907A-D23AA61A02D2}</Project>
-      <Name>Glyph.Localization</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Math\Glyph.Math.csproj">
       <Project>{43692EE3-467A-41C9-8C18-9E7FCF7CC9DC}</Project>
