--- a/Glyph.Scripting/Glyph.Scripting.csproj
+++ b/Glyph.Scripting/Glyph.Scripting.csproj
@@ -53,7 +53,7 @@
     <Compile Include="ITrigger.cs" />
     <Compile Include="ITriggerArea.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScriptPlayer.cs" />
+    <Compile Include="LuaScriptPlayer.cs" />
     <Compile Include="ScriptManager.cs" />
     <Compile Include="Triggers\TriggerVar.cs" />
     <Compile Include="Triggers\TriggerArea.cs" />
