--- a/Glyph.Math/Glyph.Math.csproj
+++ b/Glyph.Math/Glyph.Math.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Shapes\IntersectionUtils.cs" />
     <Compile Include="Shapes\ICircle.cs" />
     <Compile Include="Shapes\IRectangle.cs" />
-    <Compile Include="Shapes\IShape.cs" />
+    <Compile Include="IShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\CenteredRectangle.cs" />
     <Compile Include="Shapes\OriginRectangle.cs" />
