--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -41,11 +41,13 @@
   <ItemGroup>
     <Compile Include="Delegates\DrawDelegate.cs" />
     <Compile Include="Exceptions\ComponentNotFoundException.cs" />
-    <Compile Include="GlyphCompositeInjector.cs" />
+    <Compile Include="Injection\GlyphCompositeInjector.cs" />
     <Compile Include="GlyphSchedulableBase.cs" />
     <Compile Include="IDraw.cs" />
     <Compile Include="IEnableable.cs" />
     <Compile Include="ILoadContent.cs" />
+    <Compile Include="Injection\InjectionScope.cs" />
+    <Compile Include="Injection\LocalDependencyInjector.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="Layers\ILayer.cs" />
     <Compile Include="Layers\ILayerManager.cs" />
