--- a/Glyph.Math/Glyph.Math.csproj
+++ b/Glyph.Math/Glyph.Math.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="IArea.cs" />
     <Compile Include="IntegerSequencer.cs" />
+    <Compile Include="Matrix3x3.cs" />
     <Compile Include="Rectangle.Extension.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\IntersectionUtils.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shapes\CenteredRectangle.cs" />
     <Compile Include="Shapes\OriginRectangle.cs" />
+    <Compile Include="Transformation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
