--- a/Glyph.Space/Glyph.Space.csproj
+++ b/Glyph.Space/Glyph.Space.csproj
@@ -37,6 +37,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GridRectangle.cs" />
+    <Compile Include="GridSize.cs" />
+    <Compile Include="IGrid.cs" />
+    <Compile Include="IGridPositionable.cs" />
     <Compile Include="Partitioning\IPartition.cs" />
     <Compile Include="Partitioning\ISpacePartitioner.cs" />
     <Compile Include="Partitioning\ISpacePartitionerParameters.cs" />
@@ -50,6 +54,10 @@
     <ProjectReference Include="..\Glyph.Math\Glyph.Math.csproj">
       <Project>{43692EE3-467A-41C9-8C18-9E7FCF7CC9DC}</Project>
       <Name>Glyph.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph\Glyph.csproj">
+      <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
+      <Name>Glyph</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
